Sun Oct  7 17:53:03 2001  David Helder  <dhelder@umich.edu>

	* src/url.[hc]: Integrated David's URL improvements (fragments,
	query, username, and password handling).  Made many parsing
	changes to make more sane/RFC-compliant.  Added some docs.
	* tests/url_test.c: Added.  Uses "make check".
	* tests/urlparse.c: Added
	* AUTHORS: Added David Bolcsfoldi

Mon Sep 24 14:07:56 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c: s/Interface/iface

Fri Sep 21 17:37:50 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_async): In pthread
	   version, malloc space for pointers passed to pthread_create.
	   Otherwise, if we return before the new thread runs, it
	   crashes.  Duh.  And I taught this stuff?
	* src/inetaddr.c (gethostbyname_async_child): Delete args.

Thu Sep 20 12:40:43 2001  David Helder  <dhelder@umich.edu>
	
	* configure.in (glib_libs): Set -lpthread in gnet-config --libs
	   when pthreads are used.
	* acconfig.h: Added HAVE_LIBPTHREAD manually
	* gnet-config.in: "

	* Makefile.am (EXTRA_DIST): Include gnet.m4.  It was in m4data,
	    not sure what's going on with autoconf.

	* configure.in (glib_libs): Use proper glib-config
	    when getting flags for gnet-config

Mon Aug 27 13:49:46 2001 Andrew Lanoix <alanoix@umich.edu>
	
	* README.win32: Fix typo

Fri Aug 24 10:47:34 2001 Andrew Lanoix <alanoix@umich.edu>
	
	* README.win32: Update

Sun Aug 12 11:59:22 2001  Andrew Lanoix <alanoix@umich.edu>

	* gnet.def: Add missing gnet_inetaddr_new_nonblock &
	   gnet_inetaddr_new_nonblock 

Mon Aug  6 13:31:37 2001  David Helder  <dhelder@umich.edu>

	* tests/dnstest.c (main): Clean-up.  Now blocks by default.
	* src/inetaddr.c (inet_aton): Fix our inet_aton to understand
	   255.255.255.255.  This function was in gnet-private.h.
	
Fri Aug  3 10:59:15 2001  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_async): Same as
	   below for Windows version.
