@@ -6,6 +6,7 @@ Changes in Gnet
 
 1.1.1 ("Cornmeal" release, UNRELEASED)
 -----
+* URLs support username, password, query, and fragment 
 * gnet_inetaddr_new_async has pthread implemention,
     no longer succeeds immediately
 * New gnet_{sha,md5}_clone functions
